networking added for url